--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,20 @@ body {
 html {
   font-size: 10px;
 }
+
+.p-inputtext,
+.p-dropdown-items {
+  font-size: 1.5rem;
+}
+
+@media (max-width: 84em) {
+  html {
+    font-size: 9px;
+  }
+}
+
+@media (max-width: 70em) {
+  html {
+    font-size: 8px;
+  }
+}
